# model_api

model_api/: test.py
model_api/cpp/: CMakeLists.txt
model_api/cpp/nanobind/: CMakeLists.txt  py_models.cpp
model_api/cpp/pybind11/: CMakeLists.txt  py_models.cpp
